@startuml Ocean View Resort - Class Diagram
!theme plain
title Ocean View Resort — Class Diagram (Domain Model)

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

class User {
  - userId : int
  - name : String
  - email : String
  - password : String
  - phone : String
  - role : String
  + getUserId() : int
  + getName() : String
  + getEmail() : String
  + setPassword(String) : void
  + getRole() : String
  + setters...
}

class Room {
  - roomId : int
  - roomName : String
  - roomType : String
  - pricePerNight : double
  - description : String
  - hasSeaView : boolean
  - hasWifi : boolean
  - hasAC : boolean
  - hasPoolAccess : boolean
  - breakfastIncluded : boolean
  - imagePath : String
  + getRoomId() : int
  + getPricePerNight() : double
  + getters/setters...
}

class Booking {
  - bookingId : int
  - reservationNumber : String
  - userId : int
  - roomId : int
  - checkIn : LocalDate
  - checkOut : LocalDate
  - totalPrice : double
  - status : String
  + getBookingId() : int
  + getReservationNumber() : String
  + getTotalPrice() : double
  + getters/setters...
}

' Associations: User 1 -* Booking, Room 1 -* Booking
User "1" -- "*" Booking : makes >
Room "1" -- "*" Booking : reserved in >

@enduml
